# tree-parsing

./: .flake8  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yaml
docs/: changelog.md  index.md  install.md
docs/usage/: customize.md  tree_from_list.md
tests/: test_tree.py
tree_parsing/: tree.py
tree_workflow/: tree.py
