[tool.poetry]
name = "tree-workflow"
version = "0.1.0"
description = "library to work with tree and lists"
license = "MIT"
authors = ["Jorge Silva <jorgesilva.ti@hotmail.com>"]
maintainers = ["Jorge Silva <jorgesilva.ti@hotmail.com>"]
readme = "README.md"
repository = "https://github.com/scjorge/tree-workflow"
keywords = ["node", "tree", "json", "json-schema", "hints", "parsin", "workflow"]
packages = [{include = "tree_workflow"}]
classifiers = [
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology"
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.flake8]
profile = "black"
ignore = ["E501"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
mypy = "^1.3.0"
flake8-pyproject = "^1.2.3"
pytest-cov = "^4.0.0"


[tool.poetry.group.doc.dependencies]
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.13"
pymdown-extensions = "^10.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
