[tool.poetry]
name = "tree-tools"
version = "0.1.0"
description = "library to work with tree and lists"
license = "MIT"
authors = ["Jorge Silva <jorgesilva.ti@hotmail.com>"]
maintainers = ["Jorge Silva <jorgesilva.ti@hotmail.com>"]
readme = "README.md"
repository = "https://github.com/scjorge/tree-tools"
documentation = "https://tree-tools.readthedocs.io/en/latest/"
keywords = ["node", "tree", "json", "json-schema", "hints", "parsin", "parsing", "workflow"]
packages = [{include = "tree_tools"}]
classifiers = [
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology"
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.flake8]
profile = "black"
ignore = ["E501"]

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
flake8-pyproject = "^1.2.3"
isort = "^5.12.0"
black = "^23.3.0"


[tool.poetry.group.doc.dependencies]
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.13"
pymdown-extensions = "^10.0.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
